# ChangeLog for dev-db/libpq
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/Attic/ChangeLog,v 1.31 2005/11/12 22:46:07 nakano Exp $

  12 Nov 2005; Masatomo Nakano <nakano@gentoo.org>
  files/libpq-8.1.0-gentoo.patch, libpq-7.3.10.ebuild,
  libpq-7.3.10-r1.ebuild, libpq-7.3.11.ebuild, libpq-7.4.8.ebuild,
  libpq-7.4.8-r1.ebuild, libpq-7.4.9.ebuild, libpq-8.0.1.ebuild,
  libpq-8.0.1-r1.ebuild, libpq-8.0.3.ebuild, libpq-8.0.3-r1.ebuild,
  libpq-8.0.4.ebuild, libpq-8.1.0.ebuild:
  removed --with-gnu-ld (#108386).

  12 Nov 2005; Masatomo Nakano <nakano@gentoo.org> Manifest:
  readded patch with -kb.

  08 Nov 2005; Masatomo Nakano <nakano@gentoo.org>
  -files/libpq-8.1_beta3-gentoo.patch, -libpq-8.1_beta3.ebuild:
  removed beta version.

*libpq-8.1.0 (08 Nov 2005)

  08 Nov 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/libpq-8.1.0-gentoo.patch, +libpq-8.1.0.ebuild:
  version bump.

  17 Oct 2005; Masatomo Nakano <nakano@gentoo.org>
  -files/libpq-8.1_beta1-gentoo.patch, -files/libpq-8.1_beta2-gentoo.patch,
  -libpq-8.1_beta1.ebuild, -libpq-8.1_beta2.ebuild:
  removed old versions.

*libpq-8.1_beta3 (15 Oct 2005)

  15 Oct 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/libpq-8.1_beta3-gentoo.patch, +libpq-8.1_beta3.ebuild:
  Version bump.

  15 Oct 2005; Masatomo Nakano <nakano@gentoo.org> Manifest:
  Fixed failed patch bug. #108855

*libpq-8.1_beta2 (08 Oct 2005)
*libpq-8.0.4 (08 Oct 2005)
*libpq-7.4.9 (08 Oct 2005)
*libpq-7.3.11 (08 Oct 2005)

  08 Oct 2005; <nakano@gentoo.org> +files/libpq-7.3.11-gentoo.patch,
  +files/libpq-7.4.9-gentoo.patch, +files/libpq-8.0.4-gentoo.patch,
  +files/libpq-8.1_beta2-gentoo.patch, +libpq-7.3.11.ebuild,
  +libpq-7.4.9.ebuild, +libpq-8.0.4.ebuild, +libpq-8.1_beta2.ebuild:
  Version bump

*libpq-8.1_beta1 (28 Aug 2005)

  28 Aug 2005; Masatomo Nakano <nakano@gentoo.org>
  +files/libpq-8.1_beta1-gentoo.patch, +libpq-8.1_beta1.ebuild:
  Version bump.
